src/PasParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PAS_BREAK
    PAS_CONTINUE
    PAS_DEFAULT
    PAS_DIV
    PAS_EXIT
    PAS_FILE
    PAS_FORWARD
    PAS_IN
    PAS_LABEL
    PAS_NIL
    PAS_PACKED
    PAS_SET
    PAS_SIZEOF
    PAS_WITH
    PAS_XOR
    SYM_AT
    SYM_CARET

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine SYM_PERIOD
Rule 2     program_head -> PAS_PROGRAM ID SYM_SEMICOLON
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> empty
Rule 7     const_part -> PAS_CONST const_expr_list
Rule 8     const_part -> empty
Rule 9     const_expr_list -> const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
Rule 10    const_expr_list -> ID SYM_EQ const_value SYM_SEMICOLON
Rule 11    const_expr_list -> const_expr_list ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
Rule 12    const_expr_list -> ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
Rule 13    const_value -> INT
Rule 14    const_value -> REAL
Rule 15    const_value -> CHAR
Rule 16    const_value -> STR
Rule 17    const_value -> SYS_CON
Rule 18    type_part -> PAS_TYPE type_decl_list
Rule 19    type_part -> empty
Rule 20    type_decl_list -> type_decl_list type_definition
Rule 21    type_decl_list -> type_definition
Rule 22    type_definition -> ID SYM_EQ type_decl SYM_SEMICOLON
Rule 23    type_decl -> simple_type_decl
Rule 24    type_decl -> array_type_decl
Rule 25    type_decl -> record_type_decl
Rule 26    simple_type_decl -> SYS_TYPE
Rule 27    simple_type_decl -> ID
Rule 28    simple_type_decl -> SYM_LPAREN name_list SYM_RPAREN
Rule 29    simple_type_decl -> const_value SYM_RANGE const_value
Rule 30    simple_type_decl -> SYM_SUB const_value SYM_RANGE const_value
Rule 31    simple_type_decl -> SYM_SUB const_value SYM_RANGE SYM_SUB const_value
Rule 32    simple_type_decl -> ID SYM_RANGE ID
Rule 33    array_type_decl -> PAS_ARRAY SYM_LBRAC simple_type_decl SYM_RBRAC PAS_OF type_decl
Rule 34    record_type_decl -> PAS_RECORD field_decl_list PAS_END
Rule 35    field_decl_list -> field_decl_list field_decl
Rule 36    field_decl_list -> field_decl
Rule 37    field_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 38    name_list -> name_list SYM_COMMA ID
Rule 39    name_list -> ID
Rule 40    var_part -> PAS_VAR var_decl_list
Rule 41    var_part -> empty
Rule 42    var_decl_list -> var_decl_list var_decl
Rule 43    var_decl_list -> var_decl
Rule 44    var_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 45    routine_part -> routine_part function_decl
Rule 46    routine_part -> routine_part procedure_decl
Rule 47    routine_part -> function_decl
Rule 48    routine_part -> procedure_decl
Rule 49    routine_part -> empty
Rule 50    function_decl -> function_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 51    function_head -> PAS_FUNCTION ID parameters SYM_COLON simple_type_decl
Rule 52    procedure_decl -> procedure_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 53    procedure_head -> PAS_PROCEDURE ID parameters
Rule 54    parameters -> SYM_LPAREN para_decl_list SYM_RPAREN
Rule 55    parameters -> empty
Rule 56    para_decl_list -> para_decl_list SYM_SEMICOLON para_type_list
Rule 57    para_decl_list -> para_type_list
Rule 58    para_type_list -> var_para_list SYM_COLON simple_type_decl
Rule 59    para_type_list -> val_para_list SYM_COLON simple_type_decl
Rule 60    var_para_list -> PAS_VAR name_list
Rule 61    val_para_list -> name_list
Rule 62    routine_body -> compound_stmt
Rule 63    compound_stmt -> PAS_BEGIN stmt_list PAS_END
Rule 64    stmt_list -> stmt_list stmt SYM_SEMICOLON
Rule 65    stmt_list -> empty
Rule 66    stmt -> INT SYM_COLON non_label_stmt
Rule 67    stmt -> non_label_stmt
Rule 68    non_label_stmt -> assign_stmt
Rule 69    non_label_stmt -> proc_stmt
Rule 70    non_label_stmt -> compound_stmt
Rule 71    non_label_stmt -> if_stmt
Rule 72    non_label_stmt -> repeat_stmt
Rule 73    non_label_stmt -> while_stmt
Rule 74    non_label_stmt -> for_stmt
Rule 75    non_label_stmt -> case_stmt
Rule 76    non_label_stmt -> goto_stmt
Rule 77    assign_stmt -> ID SYM_ASSIGN expression
Rule 78    assign_stmt -> ID SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
Rule 79    assign_stmt -> ID SYM_PERIOD ID SYM_ASSIGN expression
Rule 80    proc_stmt -> ID
Rule 81    proc_stmt -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 82    proc_stmt -> SYS_PROC
Rule 83    proc_stmt -> SYS_PROC SYM_LPAREN expression_list SYM_RPAREN
Rule 84    proc_stmt -> PAS_READ SYM_LPAREN factor SYM_RPAREN
Rule 85    if_stmt -> PAS_IF expression PAS_THEN stmt else_clause
Rule 86    else_clause -> PAS_ELSE stmt
Rule 87    else_clause -> empty
Rule 88    repeat_stmt -> PAS_REPEAT stmt_list PAS_UNTIL expression
Rule 89    while_stmt -> PAS_WHILE expression PAS_DO stmt
Rule 90    for_stmt -> PAS_FOR ID SYM_ASSIGN expression direction expression PAS_DO stmt
Rule 91    direction -> PAS_TO
Rule 92    direction -> PAS_DOWNTO
Rule 93    case_stmt -> PAS_CASE expression PAS_OF case_expr_list PAS_END
Rule 94    case_expr_list -> case_expr_list case_expr
Rule 95    case_expr_list -> case_expr
Rule 96    case_expr -> const_value SYM_COLON stmt SYM_SEMICOLON
Rule 97    case_expr -> ID SYM_COLON stmt SYM_SEMICOLON
Rule 98    goto_stmt -> PAS_GOTO INT
Rule 99    expression_list -> expression_list SYM_COMMA expression
Rule 100   expression_list -> expression
Rule 101   expression -> expression SYM_GE expr
Rule 102   expression -> expression SYM_GT expr
Rule 103   expression -> expression SYM_LE expr
Rule 104   expression -> expression SYM_LT expr
Rule 105   expression -> expression SYM_EQ expr
Rule 106   expression -> expression SYM_NE expr
Rule 107   expression -> expr
Rule 108   expr -> expr SYM_ADD term
Rule 109   expr -> expr SYM_SUB term
Rule 110   expr -> expr PAS_OR term
Rule 111   expr -> term
Rule 112   term -> term SYM_MUL factor
Rule 113   term -> term SYM_DIV factor
Rule 114   term -> term PAS_MOD factor
Rule 115   term -> term PAS_AND factor
Rule 116   term -> factor
Rule 117   factor -> ID
Rule 118   factor -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 119   factor -> SYS_FUNCT
Rule 120   factor -> SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
Rule 121   factor -> const_value
Rule 122   factor -> SYM_LPAREN expression SYM_RPAREN
Rule 123   factor -> PAS_NOT factor
Rule 124   factor -> SYM_SUB factor
Rule 125   factor -> ID SYM_LBRAC expression SYM_RBRAC
Rule 126   factor -> ID SYM_PERIOD ID
Rule 127   args_list -> args_list SYM_COMMA expression
Rule 128   args_list -> expression
Rule 129   empty -> <empty>

Terminals, with rules where they appear

CHAR                 : 15
ID                   : 2 9 10 11 12 22 27 32 32 38 39 51 53 77 78 79 79 80 81 90 97 117 118 125 126 126
INT                  : 13 66 98
PAS_AND              : 115
PAS_ARRAY            : 33
PAS_BEGIN            : 63
PAS_BREAK            : 
PAS_CASE             : 93
PAS_CONST            : 7
PAS_CONTINUE         : 
PAS_DEFAULT          : 
PAS_DIV              : 
PAS_DO               : 89 90
PAS_DOWNTO           : 92
PAS_ELSE             : 86
PAS_END              : 34 63 93
PAS_EXIT             : 
PAS_FILE             : 
PAS_FOR              : 90
PAS_FORWARD          : 
PAS_FUNCTION         : 51
PAS_GOTO             : 98
PAS_IF               : 85
PAS_IN               : 
PAS_LABEL            : 
PAS_MOD              : 114
PAS_NIL              : 
PAS_NOT              : 123
PAS_OF               : 33 93
PAS_OR               : 110
PAS_PACKED           : 
PAS_PROCEDURE        : 53
PAS_PROGRAM          : 2
PAS_READ             : 84
PAS_RECORD           : 34
PAS_REPEAT           : 88
PAS_SET              : 
PAS_SIZEOF           : 
PAS_THEN             : 85
PAS_TO               : 91
PAS_TYPE             : 18
PAS_UNTIL            : 88
PAS_VAR              : 40 60
PAS_WHILE            : 89
PAS_WITH             : 
PAS_XOR              : 
REAL                 : 14
STR                  : 16
SYM_ADD              : 108
SYM_ASSIGN           : 77 78 79 90
SYM_AT               : 
SYM_CARET            : 
SYM_COLON            : 37 44 51 58 59 66 96 97
SYM_COMMA            : 38 99 127
SYM_DIV              : 113
SYM_EQ               : 9 10 11 12 22 105
SYM_GE               : 101
SYM_GT               : 102
SYM_LBRAC            : 33 78 125
SYM_LE               : 103
SYM_LPAREN           : 28 54 81 83 84 118 120 122
SYM_LT               : 104
SYM_MUL              : 112
SYM_NE               : 106
SYM_PERIOD           : 1 79 126
SYM_RANGE            : 29 30 31 32
SYM_RBRAC            : 33 78 125
SYM_RPAREN           : 28 54 81 83 84 118 120 122
SYM_SEMICOLON        : 2 9 10 11 12 22 37 44 50 50 52 52 56 64 96 97
SYM_SUB              : 11 12 30 31 31 109 124
SYS_CON              : 17
SYS_FUNCT            : 119 120
SYS_PROC             : 82 83
SYS_TYPE             : 26
error                : 

Nonterminals, with rules where they appear

args_list            : 81 118 120 127
array_type_decl      : 24
assign_stmt          : 68
case_expr            : 94 95
case_expr_list       : 93 94
case_stmt            : 75
compound_stmt        : 62 70
const_expr_list      : 7 9 11
const_part           : 5
const_value          : 9 10 11 12 29 29 30 30 31 31 96 121
direction            : 90
else_clause          : 85
empty                : 6 8 19 41 49 55 65 87
expr                 : 101 102 103 104 105 106 107 108 109 110
expression           : 77 78 78 79 85 88 89 90 90 93 99 100 101 102 103 104 105 106 122 125 127 128
expression_list      : 83 99
factor               : 84 112 113 114 115 116 123 124
field_decl           : 35 36
field_decl_list      : 34 35
for_stmt             : 74
function_decl        : 45 47
function_head        : 50
goto_stmt            : 76
if_stmt              : 71
label_part           : 5
name_list            : 28 37 38 44 60 61
non_label_stmt       : 66 67
para_decl_list       : 54 56
para_type_list       : 56 57
parameters           : 51 53
proc_stmt            : 69
procedure_decl       : 46 48
procedure_head       : 52
program              : 0
program_head         : 1
record_type_decl     : 25
repeat_stmt          : 72
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 45 46
simple_type_decl     : 23 33 51 58 59
stmt                 : 64 85 86 89 90 96 97
stmt_list            : 63 64 88
sub_routine          : 50 52
term                 : 108 109 110 111 112 113 114 115
type_decl            : 22 33 37 44
type_decl_list       : 18 20
type_definition      : 20 21
type_part            : 5
val_para_list        : 59
var_decl             : 42 43
var_decl_list        : 40 42
var_para_list        : 58
var_part             : 5
while_stmt           : 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine SYM_PERIOD
    (2) program_head -> . PAS_PROGRAM ID SYM_SEMICOLON

    PAS_PROGRAM     shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine SYM_PERIOD
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . empty
    (129) empty -> .

    PAS_CONST       reduce using rule 129 (empty -> .)
    PAS_TYPE        reduce using rule 129 (empty -> .)
    PAS_VAR         reduce using rule 129 (empty -> .)
    PAS_FUNCTION    reduce using rule 129 (empty -> .)
    PAS_PROCEDURE   reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) program_head -> PAS_PROGRAM . ID SYM_SEMICOLON

    ID              shift and go to state 8


state 4

    (1) program -> program_head routine . SYM_PERIOD

    SYM_PERIOD      shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (62) routine_body -> . compound_stmt
    (63) compound_stmt -> . PAS_BEGIN stmt_list PAS_END

    PAS_BEGIN       shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . PAS_CONST const_expr_list
    (8) const_part -> . empty
    (129) empty -> .

    PAS_CONST       shift and go to state 14
    PAS_TYPE        reduce using rule 129 (empty -> .)
    PAS_VAR         reduce using rule 129 (empty -> .)
    PAS_FUNCTION    reduce using rule 129 (empty -> .)
    PAS_PROCEDURE   reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)

    const_part                     shift and go to state 13
    empty                          shift and go to state 15

state 7

    (6) label_part -> empty .

    PAS_CONST       reduce using rule 6 (label_part -> empty .)
    PAS_TYPE        reduce using rule 6 (label_part -> empty .)
    PAS_VAR         reduce using rule 6 (label_part -> empty .)
    PAS_FUNCTION    reduce using rule 6 (label_part -> empty .)
    PAS_PROCEDURE   reduce using rule 6 (label_part -> empty .)
    PAS_BEGIN       reduce using rule 6 (label_part -> empty .)


state 8

    (2) program_head -> PAS_PROGRAM ID . SYM_SEMICOLON

    SYM_SEMICOLON   shift and go to state 16


state 9

    (1) program -> program_head routine SYM_PERIOD .

    $end            reduce using rule 1 (program -> program_head routine SYM_PERIOD .)


state 10

    (3) routine -> routine_head routine_body .

    SYM_PERIOD      reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (62) routine_body -> compound_stmt .

    SYM_PERIOD      reduce using rule 62 (routine_body -> compound_stmt .)
    SYM_SEMICOLON   reduce using rule 62 (routine_body -> compound_stmt .)


state 12

    (63) compound_stmt -> PAS_BEGIN . stmt_list PAS_END
    (64) stmt_list -> . stmt_list stmt SYM_SEMICOLON
    (65) stmt_list -> . empty
    (129) empty -> .

    PAS_END         reduce using rule 129 (empty -> .)
    INT             reduce using rule 129 (empty -> .)
    ID              reduce using rule 129 (empty -> .)
    SYS_PROC        reduce using rule 129 (empty -> .)
    PAS_READ        reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)
    PAS_IF          reduce using rule 129 (empty -> .)
    PAS_REPEAT      reduce using rule 129 (empty -> .)
    PAS_WHILE       reduce using rule 129 (empty -> .)
    PAS_FOR         reduce using rule 129 (empty -> .)
    PAS_CASE        reduce using rule 129 (empty -> .)
    PAS_GOTO        reduce using rule 129 (empty -> .)

    stmt_list                      shift and go to state 17
    empty                          shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (18) type_part -> . PAS_TYPE type_decl_list
    (19) type_part -> . empty
    (129) empty -> .

    PAS_TYPE        shift and go to state 20
    PAS_VAR         reduce using rule 129 (empty -> .)
    PAS_FUNCTION    reduce using rule 129 (empty -> .)
    PAS_PROCEDURE   reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)

    type_part                      shift and go to state 19
    empty                          shift and go to state 21

state 14

    (7) const_part -> PAS_CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
    (10) const_expr_list -> . ID SYM_EQ const_value SYM_SEMICOLON
    (11) const_expr_list -> . const_expr_list ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON
    (12) const_expr_list -> . ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    ID              shift and go to state 23

    const_expr_list                shift and go to state 22

state 15

    (8) const_part -> empty .

    PAS_TYPE        reduce using rule 8 (const_part -> empty .)
    PAS_VAR         reduce using rule 8 (const_part -> empty .)
    PAS_FUNCTION    reduce using rule 8 (const_part -> empty .)
    PAS_PROCEDURE   reduce using rule 8 (const_part -> empty .)
    PAS_BEGIN       reduce using rule 8 (const_part -> empty .)


state 16

    (2) program_head -> PAS_PROGRAM ID SYM_SEMICOLON .

    PAS_BEGIN       reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)
    PAS_CONST       reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)
    PAS_TYPE        reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)
    PAS_VAR         reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)
    PAS_FUNCTION    reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)
    PAS_PROCEDURE   reduce using rule 2 (program_head -> PAS_PROGRAM ID SYM_SEMICOLON .)


state 17

    (63) compound_stmt -> PAS_BEGIN stmt_list . PAS_END
    (64) stmt_list -> stmt_list . stmt SYM_SEMICOLON
    (66) stmt -> . INT SYM_COLON non_label_stmt
    (67) stmt -> . non_label_stmt
    (68) non_label_stmt -> . assign_stmt
    (69) non_label_stmt -> . proc_stmt
    (70) non_label_stmt -> . compound_stmt
    (71) non_label_stmt -> . if_stmt
    (72) non_label_stmt -> . repeat_stmt
    (73) non_label_stmt -> . while_stmt
    (74) non_label_stmt -> . for_stmt
    (75) non_label_stmt -> . case_stmt
    (76) non_label_stmt -> . goto_stmt
    (77) assign_stmt -> . ID SYM_ASSIGN expression
    (78) assign_stmt -> . ID SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
    (79) assign_stmt -> . ID SYM_PERIOD ID SYM_ASSIGN expression
    (80) proc_stmt -> . ID
    (81) proc_stmt -> . ID SYM_LPAREN args_list SYM_RPAREN
    (82) proc_stmt -> . SYS_PROC
    (83) proc_stmt -> . SYS_PROC SYM_LPAREN expression_list SYM_RPAREN
    (84) proc_stmt -> . PAS_READ SYM_LPAREN factor SYM_RPAREN
    (63) compound_stmt -> . PAS_BEGIN stmt_list PAS_END
    (85) if_stmt -> . PAS_IF expression PAS_THEN stmt else_clause
    (88) repeat_stmt -> . PAS_REPEAT stmt_list PAS_UNTIL expression
    (89) while_stmt -> . PAS_WHILE expression PAS_DO stmt
    (90) for_stmt -> . PAS_FOR ID SYM_ASSIGN expression direction expression PAS_DO stmt
    (93) case_stmt -> . PAS_CASE expression PAS_OF case_expr_list PAS_END
    (98) goto_stmt -> . PAS_GOTO INT

    PAS_END         shift and go to state 24
    INT             shift and go to state 26
    ID              shift and go to state 37
    SYS_PROC        shift and go to state 38
    PAS_READ        shift and go to state 39
    PAS_BEGIN       shift and go to state 12
    PAS_IF          shift and go to state 40
    PAS_REPEAT      shift and go to state 41
    PAS_WHILE       shift and go to state 42
    PAS_FOR         shift and go to state 43
    PAS_CASE        shift and go to state 44
    PAS_GOTO        shift and go to state 45

    stmt                           shift and go to state 25
    non_label_stmt                 shift and go to state 27
    assign_stmt                    shift and go to state 28
    proc_stmt                      shift and go to state 29
    compound_stmt                  shift and go to state 30
    if_stmt                        shift and go to state 31
    repeat_stmt                    shift and go to state 32
    while_stmt                     shift and go to state 33
    for_stmt                       shift and go to state 34
    case_stmt                      shift and go to state 35
    goto_stmt                      shift and go to state 36

state 18

    (65) stmt_list -> empty .

    PAS_END         reduce using rule 65 (stmt_list -> empty .)
    INT             reduce using rule 65 (stmt_list -> empty .)
    ID              reduce using rule 65 (stmt_list -> empty .)
    SYS_PROC        reduce using rule 65 (stmt_list -> empty .)
    PAS_READ        reduce using rule 65 (stmt_list -> empty .)
    PAS_BEGIN       reduce using rule 65 (stmt_list -> empty .)
    PAS_IF          reduce using rule 65 (stmt_list -> empty .)
    PAS_REPEAT      reduce using rule 65 (stmt_list -> empty .)
    PAS_WHILE       reduce using rule 65 (stmt_list -> empty .)
    PAS_FOR         reduce using rule 65 (stmt_list -> empty .)
    PAS_CASE        reduce using rule 65 (stmt_list -> empty .)
    PAS_GOTO        reduce using rule 65 (stmt_list -> empty .)
    PAS_UNTIL       reduce using rule 65 (stmt_list -> empty .)


state 19

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (40) var_part -> . PAS_VAR var_decl_list
    (41) var_part -> . empty
    (129) empty -> .

    PAS_VAR         shift and go to state 47
    PAS_FUNCTION    reduce using rule 129 (empty -> .)
    PAS_PROCEDURE   reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)

    var_part                       shift and go to state 46
    empty                          shift and go to state 48

state 20

    (18) type_part -> PAS_TYPE . type_decl_list
    (20) type_decl_list -> . type_decl_list type_definition
    (21) type_decl_list -> . type_definition
    (22) type_definition -> . ID SYM_EQ type_decl SYM_SEMICOLON

    ID              shift and go to state 51

    type_decl_list                 shift and go to state 49
    type_definition                shift and go to state 50

state 21

    (19) type_part -> empty .

    PAS_VAR         reduce using rule 19 (type_part -> empty .)
    PAS_FUNCTION    reduce using rule 19 (type_part -> empty .)
    PAS_PROCEDURE   reduce using rule 19 (type_part -> empty .)
    PAS_BEGIN       reduce using rule 19 (type_part -> empty .)


state 22

    (7) const_part -> PAS_CONST const_expr_list .
    (9) const_expr_list -> const_expr_list . ID SYM_EQ const_value SYM_SEMICOLON
    (11) const_expr_list -> const_expr_list . ID SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    PAS_TYPE        reduce using rule 7 (const_part -> PAS_CONST const_expr_list .)
    PAS_VAR         reduce using rule 7 (const_part -> PAS_CONST const_expr_list .)
    PAS_FUNCTION    reduce using rule 7 (const_part -> PAS_CONST const_expr_list .)
    PAS_PROCEDURE   reduce using rule 7 (const_part -> PAS_CONST const_expr_list .)
    PAS_BEGIN       reduce using rule 7 (const_part -> PAS_CONST const_expr_list .)
    ID              shift and go to state 52


state 23

    (10) const_expr_list -> ID . SYM_EQ const_value SYM_SEMICOLON
    (12) const_expr_list -> ID . SYM_EQ SYM_SUB const_value SYM_SEMICOLON

    SYM_EQ          shift and go to state 53


state 24

    (63) compound_stmt -> PAS_BEGIN stmt_list PAS_END .

    SYM_PERIOD      reduce using rule 63 (compound_stmt -> PAS_BEGIN stmt_list PAS_END .)
    SYM_SEMICOLON   reduce using rule 63 (compound_stmt -> PAS_BEGIN stmt_list PAS_END .)
    PAS_ELSE        reduce using rule 63 (compound_stmt -> PAS_BEGIN stmt_list PAS_END .)


state 25

    (64) stmt_list -> stmt_list stmt . SYM_SEMICOLON

    SYM_SEMICOLON   shift and go to state 54


state 26

    (66) stmt -> INT . SYM_COLON non_label_stmt

    SYM_COLON       shift and go to state 55


state 27

    (67) stmt -> non_label_stmt .

    SYM_SEMICOLON   reduce using rule 67 (stmt -> non_label_stmt .)
    PAS_ELSE        reduce using rule 67 (stmt -> non_label_stmt .)


state 28

    (68) non_label_stmt -> assign_stmt .

    SYM_SEMICOLON   reduce using rule 68 (non_label_stmt -> assign_stmt .)
    PAS_ELSE        reduce using rule 68 (non_label_stmt -> assign_stmt .)


state 29

    (69) non_label_stmt -> proc_stmt .

    SYM_SEMICOLON   reduce using rule 69 (non_label_stmt -> proc_stmt .)
    PAS_ELSE        reduce using rule 69 (non_label_stmt -> proc_stmt .)


state 30

    (70) non_label_stmt -> compound_stmt .

    SYM_SEMICOLON   reduce using rule 70 (non_label_stmt -> compound_stmt .)
    PAS_ELSE        reduce using rule 70 (non_label_stmt -> compound_stmt .)


state 31

    (71) non_label_stmt -> if_stmt .

    SYM_SEMICOLON   reduce using rule 71 (non_label_stmt -> if_stmt .)
    PAS_ELSE        reduce using rule 71 (non_label_stmt -> if_stmt .)


state 32

    (72) non_label_stmt -> repeat_stmt .

    SYM_SEMICOLON   reduce using rule 72 (non_label_stmt -> repeat_stmt .)
    PAS_ELSE        reduce using rule 72 (non_label_stmt -> repeat_stmt .)


state 33

    (73) non_label_stmt -> while_stmt .

    SYM_SEMICOLON   reduce using rule 73 (non_label_stmt -> while_stmt .)
    PAS_ELSE        reduce using rule 73 (non_label_stmt -> while_stmt .)


state 34

    (74) non_label_stmt -> for_stmt .

    SYM_SEMICOLON   reduce using rule 74 (non_label_stmt -> for_stmt .)
    PAS_ELSE        reduce using rule 74 (non_label_stmt -> for_stmt .)


state 35

    (75) non_label_stmt -> case_stmt .

    SYM_SEMICOLON   reduce using rule 75 (non_label_stmt -> case_stmt .)
    PAS_ELSE        reduce using rule 75 (non_label_stmt -> case_stmt .)


state 36

    (76) non_label_stmt -> goto_stmt .

    SYM_SEMICOLON   reduce using rule 76 (non_label_stmt -> goto_stmt .)
    PAS_ELSE        reduce using rule 76 (non_label_stmt -> goto_stmt .)


state 37

    (77) assign_stmt -> ID . SYM_ASSIGN expression
    (78) assign_stmt -> ID . SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
    (79) assign_stmt -> ID . SYM_PERIOD ID SYM_ASSIGN expression
    (80) proc_stmt -> ID .
    (81) proc_stmt -> ID . SYM_LPAREN args_list SYM_RPAREN

    SYM_ASSIGN      shift and go to state 56
    SYM_LBRAC       shift and go to state 57
    SYM_PERIOD      shift and go to state 58
    SYM_SEMICOLON   reduce using rule 80 (proc_stmt -> ID .)
    PAS_ELSE        reduce using rule 80 (proc_stmt -> ID .)
    SYM_LPAREN      shift and go to state 59


state 38

    (82) proc_stmt -> SYS_PROC .
    (83) proc_stmt -> SYS_PROC . SYM_LPAREN expression_list SYM_RPAREN

    SYM_SEMICOLON   reduce using rule 82 (proc_stmt -> SYS_PROC .)
    PAS_ELSE        reduce using rule 82 (proc_stmt -> SYS_PROC .)
    SYM_LPAREN      shift and go to state 60


state 39

    (84) proc_stmt -> PAS_READ . SYM_LPAREN factor SYM_RPAREN

    SYM_LPAREN      shift and go to state 61


state 40

    (85) if_stmt -> PAS_IF . expression PAS_THEN stmt else_clause
    (101) expression -> . expression SYM_GE expr
    (102) expression -> . expression SYM_GT expr
    (103) expression -> . expression SYM_LE expr
    (104) expression -> . expression SYM_LT expr
    (105) expression -> . expression SYM_EQ expr
    (106) expression -> . expression SYM_NE expr
    (107) expression -> . expr
    (108) expr -> . expr SYM_ADD term
    (109) expr -> . expr SYM_SUB term
    (110) expr -> . expr PAS_OR term
    (111) expr -> . term
    (112) term -> . term SYM_MUL factor
    (113) term -> . term SYM_DIV factor
    (114) term -> . term PAS_MOD factor
    (115) term -> . term PAS_AND factor
    (116) term -> . factor
    (117) factor -> . ID
    (118) factor -> . ID SYM_LPAREN args_list SYM_RPAREN
    (119) factor -> . SYS_FUNCT
    (120) factor -> . SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
    (121) factor -> . const_value
    (122) factor -> . SYM_LPAREN expression SYM_RPAREN
    (123) factor -> . PAS_NOT factor
    (124) factor -> . SYM_SUB factor
    (125) factor -> . ID SYM_LBRAC expression SYM_RBRAC
    (126) factor -> . ID SYM_PERIOD ID
    (13) const_value -> . INT
    (14) const_value -> . REAL
    (15) const_value -> . CHAR
    (16) const_value -> . STR
    (17) const_value -> . SYS_CON

    ID              shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    SYM_LPAREN      shift and go to state 68
    PAS_NOT         shift and go to state 71
    SYM_SUB         shift and go to state 65
    INT             shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STR             shift and go to state 75
    SYS_CON         shift and go to state 76

    expression                     shift and go to state 62
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 41

    (88) repeat_stmt -> PAS_REPEAT . stmt_list PAS_UNTIL expression
    (64) stmt_list -> . stmt_list stmt SYM_SEMICOLON
    (65) stmt_list -> . empty
    (129) empty -> .

    PAS_UNTIL       reduce using rule 129 (empty -> .)
    INT             reduce using rule 129 (empty -> .)
    ID              reduce using rule 129 (empty -> .)
    SYS_PROC        reduce using rule 129 (empty -> .)
    PAS_READ        reduce using rule 129 (empty -> .)
    PAS_BEGIN       reduce using rule 129 (empty -> .)
    PAS_IF          reduce using rule 129 (empty -> .)
    PAS_REPEAT      reduce using rule 129 (empty -> .)
    PAS_WHILE       reduce using rule 129 (empty -> .)
    PAS_FOR         reduce using rule 129 (empty -> .)
    PAS_CASE        reduce using rule 129 (empty -> .)
    PAS_GOTO        reduce using rule 129 (empty -> .)

    stmt_list                      shift and go to state 77
    empty                          shift and go to state 18

state 42

    (89) while_stmt -> PAS_WHILE . expression PAS_DO stmt
    (101) expression -> . expression SYM_GE expr
    (102) expression -> . expression SYM_GT expr
    (103) expression -> . expression SYM_LE expr
    (104) expression -> . expression SYM_LT expr
    (105) expression -> . expression SYM_EQ expr
    (106) expression -> . expression SYM_NE expr
    (107) expression -> . expr
    (108) expr -> . expr SYM_ADD term
    (109) expr -> . expr SYM_SUB term
    (110) expr -> . expr PAS_OR term
    (111) expr -> . term
    (112) term -> . term SYM_MUL factor
    (113) term -> . term SYM_DIV factor
    (114) term -> . term PAS_MOD factor
    (115) term -> . term PAS_AND factor
    (116) term -> . factor
    (117) factor -> . ID
    (118) factor -> . ID SYM_LPAREN args_list SYM_RPAREN
    (119) factor -> . SYS_FUNCT
    (120) factor -> . SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
    (121) factor -> . const_value
    (122) factor -> . SYM_LPAREN expression SYM_RPAREN
    (123) factor -> . PAS_NOT factor
    (124) factor -> . SYM_SUB factor
    (125) factor -> . ID SYM_LBRAC expression SYM_RBRAC
    (126) factor -> . ID SYM_PERIOD ID
    (13) const_value -> . INT
    (14) const_value -> . REAL
    (15) const_value -> . CHAR
    (16) const_value -> . STR
    (17) const_value -> . SYS_CON

    ID              shift and go to state 67
    SYS_FUNCT       shift and go to state 69
    SYM_LPAREN      shift and go to state 68
    PAS_NOT         shift and go to state 71
    SYM_SUB         shift and go to state 65
    INT             shift and go to state 72
    REAL            shift and go to state 73
    CHAR            shift and go to state 74
    STR             shift and go to state 75
    SYS_CON         shift and go to state 76

    expression                     shift and go to state 78
    expr                           shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 66
    const_value                    shift and go to state 70

state 43

    (90) for_stmt -> PAS_FOR . ID SYM_ASSIGN expression direction expression PAS_DO stmt

    ID              shift and go to state 79


state 44
